<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3_ros</name>
  <version>1.1.1</version>
  <description>ORB SLAM3 ROS implementation.</description>

  <author email="thienhoangnguyen94@gmail.com">Thien Nguyen</author> <!-- Original -->
  <author email="bo-miquel.nordfeldt@uib.eu">Bo Miquel Nordfeldt-Fiol</author> <!-- Modifications -->

  <maintainer email="thienhoangnguyen94@gmail.com">Thien Nguyen</maintainer> <!-- Original -->
  <maintainer email="bo-miquel.nordfeldt@uib.eu">Bo Miquel Nordfeldt-Fiol</maintainer> <!-- Modifications -->

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies (Build + Exec) -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_filters</depend>
  <depend>rosgraph_msgs</depend>

  <!-- Only Build -->
  <build_depend>message_generation</build_depend>

  <!-- Only Exec -->
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>